--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "tsc && node dist/index.js",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "author": "Ryan Anglem",
   "license": "ISC",
-  "dependencies": {
-    "readline": "^1.3.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
@@ -19,6 +17,8 @@
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.11",
     "babel-jest": "^24.9.0",
-    "jest": "^24.9.0"
+    "babel-polyfill": "^6.26.0",
+    "jest": "^24.9.0",
+    "mock-stdin": "^1.0.0"
   }
 }
