config jest properly for ts

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-jest": "^24.9.0",
     "babel-polyfill": "^6.26.0",
     "jest": "^24.9.0",
-    "mock-stdin": "^1.0.0"
+    "mock-stdin": "^1.0.0",
+    "ts-jest": "^24.2.0",
+    "typescript": "^3.7.2"
   }
 }
